Implement web admin portal
Signed-off-by: Jonathan M. Wilbur <jonathan@wilbur.space>

--- a/apps/meerkat/src/assets/views/index.hbs
+++ b/apps/meerkat/src/assets/views/index.hbs
@@ -18,17 +18,40 @@
     </head>
     <body>
         <h1>Meerkat DSA Web Administration Portal</h1>
+        <hr />
+        <div>
+            <p>
+                Meerkat DSA is an X.500 Directory Server / LDAP Server written
+                in TypeScript by Wildboar Software.
+            </p>
+        </div>
+        <hr />
         <nav>
             <ul>
                 <li>
-                    <a href="/schema">Schema</a>
+                    <a href="/dit/tree">DIT Tree</a>
+                </li>
+                <li>
+                    <span>Schema</span>
+                    <ul>
+                        <li><a href="/oc">Object Classes</a></li>
+                        <li><a href="/at">Attribute Types</a></li>
+                        <li><a href="/as">Abstract Syntaxes</a></li>
+                        <li><a href="/mr">Matching Rules</a></li>
+                        <li><a href="/nf">Name Forms</a></li>
+                        <li><a href="/avc">Context Types</a></li>
+                        <li><a href="/lsx">LDAP Syntaxes</a></li>
+                    </ul>
                 </li>
                 <li>
                     <a href="/ob">Operational Bindings</a>
                 </li>
                 <li>
-                    System
+                    <span>System</span>
                     <ul>
+                        <li><a href="/hibernate">Hibernate</a></li>
+                        <li><a href="/updates">Updates</a></li>
+                        <li><a href="/help">Support</a></li>
                         <li><a href="/about">About</a></li>
                     </ul>
                 </li>
