--- a/apps/meerkat/src/assets/views/ob_id.hbs
+++ b/apps/meerkat/src/assets/views/ob_id.hbs
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <title>App</title>
+        <title>Op. Binding {{uuid}} - Meerkat DSA</title>
         <style>
             body {
                 background-color: black;
