Add conformance statement to admin console
Signed-off-by: Jonathan M. Wilbur <jonathan@wilbur.space>

--- a/apps/meerkat/src/assets/views/dsait_dse_id.hbs
+++ b/apps/meerkat/src/assets/views/dsait_dse_id.hbs
@@ -26,14 +26,14 @@
                 </li>
                 {{#if superiorUUID}}
                     <li>
-                        <a href="/dit/dse/{{superiorUUID}}">Go to Immediate Superior</a>
+                        <a href="/dsait/dse/{{superiorUUID}}">Go to Immediate Superior</a>
                     </li>
                 {{/if}}
             </ul>
         </nav>
         <hr />
         <h2>Actions</h2>
-        <form action="/dit/dse/{{entryUUID}}/delete" method="POST" >
+        <form action="/dsait/dse/{{entryUUID}}/delete" method="POST" >
             <button type="submit">Delete</button>
         </form>
         <hr />
