Make Value.contexts an array
Signed-off-by: Jonathan M. Wilbur <jonathan@wilbur.space>

--- a/apps/meerkat/src/assets/views/dsait_dse_id.hbs
+++ b/apps/meerkat/src/assets/views/dsait_dse_id.hbs
@@ -56,8 +56,8 @@
                     <td>{{flags}}</td>
                 </tr>
                 <tr>
-                    <td>createdTimestamp</td>
-                    <td>{{createdTimestamp}}</td>
+                    <td>createTimestamp</td>
+                    <td>{{createTimestamp}}</td>
                 </tr>
                 <tr>
                     <td>modifyTimestamp</td>
