--- a/apps/meerkat/src/assets/views/tree.hbs
+++ b/apps/meerkat/src/assets/views/tree.hbs
@@ -8,6 +8,15 @@
                 background-color: black;
                 color: white;
             }
+            a {
+                color: #F44336;
+            }
+            a:hover {
+                color: #EF9A9A;
+            }
+            a:visited {
+                color: #7B1FA2;
+            }
             @media screen and (prefers-color-scheme: light) {
                 body {
                     background-color: white;
@@ -20,6 +29,8 @@
         <h1>DIT Tree View</h1>
         <hr />
         <nav><a href="/">Back to Home</a></nav>
+        <hr />
+        <p>What follows is the subset of the DIT that is currently cached in memory only. There may be more entries in the database.</p>
         <hr />
         <h2>Legend</h2>
         <table>
