--- a/apps/meerkat/src/assets/views/hibernate.hbs
+++ b/apps/meerkat/src/assets/views/hibernate.hbs
@@ -8,6 +8,15 @@
                 background-color: black;
                 color: white;
             }
+            a {
+                color: #F44336;
+            }
+            a:hover {
+                color: #EF9A9A;
+            }
+            a:visited {
+                color: #7B1FA2;
+            }
             @media screen and (prefers-color-scheme: light) {
                 body {
                     background-color: white;
@@ -28,7 +37,7 @@
             <p>
                 Hibernation puts Meerkat DSA in a minimally-responsive state
                 where all connections and operations are rejected. This can be
-                if a severe security vulnerability is discovered.
+                useful if a severe security vulnerability is discovered.
             </p>
         </div>
         <hr />
