--- a/apps/meerkat/src/assets/views/index.hbs
+++ b/apps/meerkat/src/assets/views/index.hbs
@@ -8,6 +8,15 @@
                 background-color: black;
                 color: white;
             }
+            a {
+                color: #F44336;
+            }
+            a:hover {
+                color: #EF9A9A;
+            }
+            a:visited {
+                color: #7B1FA2;
+            }
             @media screen and (prefers-color-scheme: light) {
                 body {
                     background-color: white;
@@ -31,7 +40,7 @@
                 <li>
                     <a href="/dsait/tree">DSA Information Tree View</a>
                 </li>
-                <li>
+                {{!-- <li>
                     <span>Schema</span>
                     <ul>
                         <li><a href="/oc">Object Classes</a></li>
@@ -42,7 +51,7 @@
                         <li><a href="/avc">Context Types</a></li>
                         <li><a href="/lsx">LDAP Syntaxes</a></li>
                     </ul>
-                </li>
+                </li> --}}
                 <li>
                     <a href="/ob">Operational Bindings</a>
                 </li>
