--- a/apps/meerkat/src/assets/views/markdown.hbs
+++ b/apps/meerkat/src/assets/views/markdown.hbs
@@ -8,6 +8,15 @@
                 background-color: black;
                 color: white;
             }
+            a {
+                color: #F44336;
+            }
+            a:hover {
+                color: #EF9A9A;
+            }
+            a:visited {
+                color: #7B1FA2;
+            }
             @media screen and (prefers-color-scheme: light) {
                 body {
                     background-color: white;
