--- a/apps/meerkat/src/assets/views/index.hbs
+++ b/apps/meerkat/src/assets/views/index.hbs
@@ -38,7 +38,7 @@
         <nav>
             <ul>
                 <li>
-                    <a href="/dsait/tree">DSA Information Tree View</a>
+                    <a href="/dsait/dse/{{rootuuid}}">Go to Root DSE</a>
                 </li>
                 {{!-- <li>
                     <span>Schema</span>
