Add disclaimers to admin console
Signed-off-by: Jonathan M. Wilbur <jonathan@wilbur.space>

--- a/apps/meerkat/src/assets/views/dsait_dse_id.hbs
+++ b/apps/meerkat/src/assets/views/dsait_dse_id.hbs
@@ -110,6 +110,14 @@
         </table>
         <h2>Subordinates</h2>
         <hr />
+        <div>
+            <p>
+                The following subordinates are sorted according to descending
+                database ID, meaning that newer subordinates will appear near
+                the top.
+            </p>
+        </div>
+        <hr />
         <ol>
             {{#each subordinates}}
             <li>
