--- a/apps/meerkat/src/assets/views/index.hbs
+++ b/apps/meerkat/src/assets/views/index.hbs
@@ -35,6 +35,16 @@
             </p>
         </div>
         <hr />
+        <div>
+            <p style="color: yellow;">
+                <b>WARNING:</b>&nbsp;
+                It is dangerous to enable the web admin console, because there
+                is no authentication, and users of the web admin console have
+                full read-and-write access to the directory. Consider disabling
+                the web admin console when you do not need it anymore.
+            </p>
+        </div>
+        <hr />
         <nav>
             <ul>
                 <li>
