--- a/apps/meerkat/src/assets/views/ob.hbs
+++ b/apps/meerkat/src/assets/views/ob.hbs
@@ -33,6 +33,15 @@
         <hr />
         <nav><a href="/">Back to Home</a></nav>
         <hr />
+        <div>
+            <p>
+                This page displays the outstanding operational bindings,
+                including those that have been requested, rejected, and
+                expired. You can also accept or reject operational binding
+                requests that have been sent to this DSA here.
+            </p>
+        </div>
+        <hr />
         <table style="width: 100%;">
             <thead>
                 <tr>
