Use monospace in web admin console

--- a/apps/meerkat/src/assets/views/dsait_dse_id.hbs
+++ b/apps/meerkat/src/assets/views/dsait_dse_id.hbs
@@ -101,9 +101,9 @@
             <tbody>
                 {{#each attributes}}
                 <tr>
-                    <td>{{[0]}}</td>
-                    <td>{{[1]}}</td>
-                    <td>{{[2]}}</td>
+                    <td><code>{{[0]}}</code></td>
+                    <td><code>{{[1]}}</code></td>
+                    <td><code>{{[2]}}</code></td>
                 </tr>
                 {{/each}}
             </tbody>
@@ -123,7 +123,7 @@
             <li>
                 <span>
                     <a href="/dsait/dse/{{[0]}}">
-                        {{[1]}}
+                        <code>{{[1]}}</code>
                     </a>
                     &nbsp;
                     {{[2]}}
