Fix automatic DOP

--- a/apps/meerkat/src/assets/views/dsait_dse_id.hbs
+++ b/apps/meerkat/src/assets/views/dsait_dse_id.hbs
@@ -42,7 +42,7 @@
         </nav>
         <hr />
         <h2>Actions</h2>
-        <form action="/dsait/dse/{{entryUUID}}/delete" method="POST" >
+        <form action="/dsait/dse/{{uuid}}/delete" method="POST" >
             <button type="submit">Delete</button>
         </form>
         <hr />
