--- a/apps/meerkat-docs/src/css/custom.css
+++ b/apps/meerkat-docs/src/css/custom.css
@@ -6,13 +6,13 @@
 
 /* You can override the default Infima variables here. */
 :root {
-    --ifm-color-primary: #25c2a0;
-    --ifm-color-primary-dark: rgb(33, 175, 144);
-    --ifm-color-primary-darker: rgb(31, 165, 136);
-    --ifm-color-primary-darkest: rgb(26, 136, 112);
-    --ifm-color-primary-light: rgb(70, 203, 174);
-    --ifm-color-primary-lighter: rgb(102, 212, 189);
-    --ifm-color-primary-lightest: rgb(146, 224, 208);
+    --ifm-color-primary: #F44336;
+    --ifm-color-primary-dark: #D32F2F;
+    --ifm-color-primary-darker: #C62828;
+    --ifm-color-primary-darkest: #B71C1C;
+    --ifm-color-primary-light: #EF9A9A;
+    --ifm-color-primary-lighter: #FFCDD2;
+    --ifm-color-primary-lightest: #FFEBEE;
     --ifm-code-font-size: 95%;
 }
 
@@ -24,5 +24,5 @@
 }
 
 html[data-theme='dark'] .docusaurus-highlight-code-line {
-    background-color: rgba(0, 0, 0, 0.3);
+    background-color: rgba(0, 0.3, 0, 180);
 }
