Configurable HTTP basic auth in web admin console

--- a/apps/meerkat/src/assets/views/updates.hbs
+++ b/apps/meerkat/src/assets/views/updates.hbs
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <title>Updates - Meerkat DSA</title>
+        <meta name="referrer" content="noreferrer">
         <style>
             body {
                 background-color: black;
