--- a/apps/meerkat/src/assets/views/help.hbs
+++ b/apps/meerkat/src/assets/views/help.hbs
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <title>Help - Meerkat DSA</title>
+        <meta name="referrer" content="noreferrer">
         <style>
             body {
                 background-color: black;
