Add IBRA and XR options to accepting OBs; robots.txt; security.txt

--- a/apps/meerkat/src/assets/views/about.hbs
+++ b/apps/meerkat/src/assets/views/about.hbs
@@ -5,6 +5,7 @@
         <title>About - Meerkat DSA</title>
         <meta name="csrf-token" content="{{csrfToken}}">
         <meta name="referrer" content="no-referrer">
+        <meta name="robots" content="noindex">
         <style>
             body {
                 background-color: black;
