--- a/apps/meerkat/src/assets/views/index.hbs
+++ b/apps/meerkat/src/assets/views/index.hbs
@@ -5,6 +5,7 @@
         <title>Meerkat DSA Web Admin</title>
         <meta name="referrer" content="no-referrer">
         <meta name="csrf-token" content="{{csrfToken}}">
+        <meta name="robots" content="noindex">
         <style>
             body {
                 background-color: black;
