--- a/apps/meerkat/src/assets/views/anchors.hbs
+++ b/apps/meerkat/src/assets/views/anchors.hbs
@@ -38,11 +38,19 @@
         </p>
         <p>
             You can view the PEM-encoded trust anchor list
-            <a href="/{{type}}-anchors/pem">here</a> or download it
-            <a href="/{{type}}-anchors/download/{{type}}-anchors.pem">here</a>.
+            <a href="/pki/{{type}}/trust-anchor-list.pem">here</a> or download it
+            <a href="/pki/{{type}}/trust-anchor-list.pem?download=1">here</a>.
             You may also view a signed equivalent of this file
-            <a href="/{{type}}-anchors/signed/pem">here</a> or download it
-            <a href="/{{type}}-anchors/signed/download/{{type}}-anchors.pem">here</a>.
+            <a href="/pki/{{type}}/trust-anchor-list-signed.pem">here</a> or download it
+            <a href="/pki/{{type}}/trust-anchor-list-signed.pem?download=1">here</a>.
+        </p>
+        <p>
+            You can view the DER-encoded trust anchor list
+            <a href="/pki/{{type}}/trust-anchor-list.cmsc">here</a> or download it
+            <a href="/pki/{{type}}/trust-anchor-list.cmsc?download=1">here</a>.
+            You may also view a signed equivalent of this file
+            <a href="/pki/{{type}}/trust-anchor-list-signed.cmsc">here</a> or download it
+            <a href="/pki/{{type}}/trust-anchor-list-signed.cmsc?download=1">here</a>.
         </p>
         <p>
             Note that the trust anchor list file you download might differ from
