--- a/apps/meerkat/src/assets/views/certs.hbs
+++ b/apps/meerkat/src/assets/views/certs.hbs
@@ -41,8 +41,8 @@
         </p>
         <p>
             You can view the PEM-encoded certificates
-            <a href="/{{type}}-certs/pem">here</a> or download them
-            <a href="/{{type}}-certs/download/{{type}}-certs.pem">here</a>. (Note that the
+            <a href="/pki/{{type}}/certs.pem">here</a> or download them
+            <a href="/pki/{{type}}/certs.pem?download=1">here</a>. (Note that the
             order in which you download them will be reversed from the order in
             which you see these certificates presented below.)
         </p>
