--- a/apps/meerkat/src/assets/views/crls.hbs
+++ b/apps/meerkat/src/assets/views/crls.hbs
@@ -39,8 +39,8 @@
         </p>
         <p>
             You can view the PEM-encoded certificate revocation lists
-            <a href="/{{type}}-crls/pem">here</a> or download them
-            <a href="/{{type}}-crls/download/{{type}}-crls.pem">here</a>.
+            <a href="/pki/{{type}}/crls.pem">here</a> or download them
+            <a href="/pki/{{type}}/crls.pem?download=1">here</a>.
         </p>
         <p>
             If you have these CRLs on your local computer, you can use
