--- a/apps/meerkat/src/assets/views/index.hbs
+++ b/apps/meerkat/src/assets/views/index.hbs
@@ -89,10 +89,9 @@
                         <li><a href="/tls-certs">TLS Certification Chain</a></li>
                         <li><a href="/tls-crls">TLS Certificate Revocation Lists</a></li>
                         <li><a href="/tls-anchors">TLS Trust Anchors</a></li>
+                        <li><a href="/pki-selfcheck">PKI Self-Check</a></li>
                         <li><a href="/remote-crl-cache">Remote CRLs Cache</a></li>
-                        <li><a href="/ocsp-cache">OCSP Response Cache</a></li>
-                        <li><a href="/crl-checker">Certificate Revocation List Checker</a></li>
-                        <li><a href="/ocsp-checker">Online Certificate Status Checker</a></li>
+                        {{!-- <li><a href="/ocsp-cache">OCSP Response Cache</a></li> --}}
                     </ul>
                 </li>
                 <li>
