--- a/apps/meerkat/src/assets/views/ob_id.hbs
+++ b/apps/meerkat/src/assets/views/ob_id.hbs
@@ -89,102 +89,60 @@
             </thead>
             <tbody>
                 <tr>
-                    <td>Status</td>
-                    <td>{{status}}</td>
+                    <td><pre>Status</pre></td>
+                    <td><pre>{{status}}</pre></td>
                 </tr>
                 <tr>
-                    <td>UUID</td>
-                    <td>{{uuid}}</td>
+                    <td><pre>UUID</pre></td>
+                    <td><pre>{{uuid}}</pre></td>
                 </tr>
                 <tr>
-                    <td>Binding Type</td>
-                    <td>{{binding_type}}</td>
+                    <td><pre>Binding Type</pre></td>
+                    <td><pre>{{binding_type}}</pre></td>
                 </tr>
                 <tr>
-                    <td>Binding Identifier</td>
-                    <td>{{binding_identifier}}</td>
+                    <td><pre>Binding Identifier</pre></td>
+                    <td><pre>{{binding_identifier}}</pre></td>
                 </tr>
                 <tr>
-                    <td>Binding Version</td>
-                    <td>{{binding_version}}</td>
+                    <td><pre>Binding Version</pre></td>
+                    <td><pre>{{binding_version}}</pre></td>
                 </tr>
                 <tr>
-                    <td>Initiator</td>
-                    <td>{{initiator}}</td>
+                    <td><pre>Initiator</pre></td>
+                    <td><pre>{{initiator}}</pre></td>
                 </tr>
                 <tr>
-                    <td>Validity Start</td>
-                    <td>{{validity_start}}</td>
+                    <td><pre>Validity Start</pre></td>
+                    <td><pre>{{validity_start}}</pre></td>
                 </tr>
                 <tr>
-                    <td>Validity End</td>
-                    <td>{{validity_end}}</td>
+                    <td><pre>Validity End</pre></td>
+                    <td><pre>{{validity_end}}</pre></td>
                 </tr>
+                {{#if cp}}
+                <tr>
+                    <td><pre>Context Prefix</pre></td>
+                    <td><pre>{{cp}}</pre></td>
+                </tr>
+                {{/if}}
+                <tr>
+                    <td><pre>Agreement Bytes</pre></td>
+                    <td><pre>{{agreement_bytes}}</pre></td>
+                </tr>
+                <tr>
+                    <td><pre>Initiator Parameters Bytes</pre></td>
+                    <td><pre>{{init_params_bytes}}</pre></td>
+                </tr>
+                {{#if previous_uuid}}
+                <tr>
+                    <td><pre>Previous Version</pre></td>
+                    <td>
+                        <pre><a href="/ob/{{previous_uuid}}">{{previous_uuid}}</a></pre>
+                    </td>
+                </tr>
+                {{/if}}
             </tbody>
         </table>
-
-    {{!-- id                 Int                         @id @default(autoincrement())
-    uuid  String  @default(uuid()) @db.Uuid
-    binding_type       Int[] // OID
-    binding_identifier Int?
-    binding_version    Int?                        @db.SmallInt
-    agreement_ber      Bytes
-    access_point_id    Int
-    access_point       AccessPoint                 @relation("ob_access_point", fields: [access_point_id], references: [id])
-    initiator          OperationalBindingInitiator
-    initiator_ber      Bytes
-    validity_start     DateTime
-    validity_end       DateTime? // NULL means "until explicitly requested"
-
-    // Security parameters
-    security_certification_path Bytes?
-    security_name               Json?
-    security_time               DateTime?
-    security_random             Bytes?
-    security_target             Int?      @db.SmallInt
-    security_operationCode      String?
-    security_errorProtection    Int?      @db.SmallInt
-    security_errorCode          String?
-
-    // Hierarchical Operation Binding
-    new_context_prefix_rdn Json?
-    immediate_superior     Json?
-
-    // Shadowing Operational Binding
-    shadowed_context_prefix Json?
-    knowledge_type          ShadowedKnowledgeType?
-    subordinates            Boolean?
-    supply_contexts         String[] // length of 0 means "allContexts"
-    supplier_initiated      Boolean?
-    periodic_beginTime      DateTime?
-    periodic_windowSize     Int?
-    periodic_updateInterval Int?
-    othertimes              Boolean?
-    master_access_point_id  Int?
-    master_access_point     AccessPoint?           @relation("ob_master", fields: [master_access_point_id], references: [id])
-    secondary_shadows       Boolean?
-
-    // Source information
-    // This should be separate from the access point, because the IP used to
-    // send the request or proxy the request could differ from the access point
-    // of the originating DSA.
-    source_ip               String? @db.Inet
-    source_tcp_port         Int?    @db.SmallInt
-    source_ae_title         Json?
-    source_credentials_type Int?    @db.SmallInt // 0 = simple, 1 = strong, 2 = external, 3 = spkm
-    source_certificate_path Bytes?
-    source_bind_token       Bytes?
-    source_strong_name      Json?
-    source_attr_cert_path   Bytes?
-
-    // Status
-    requested_time      DateTime  @default(now())
-    responded_time      DateTime?
-    terminated_time     DateTime?
-    accepted            Boolean?
-    last_update         DateTime?
-    last_ob_problem     Int?      @db.SmallInt
-    last_shadow_problem Int?      @db.SmallInt --}}
-
     </body>
 </html>
