--- a/apps/meerkat/src/assets/views/dsait_dse_id.hbs
+++ b/apps/meerkat/src/assets/views/dsait_dse_id.hbs
@@ -66,7 +66,7 @@
                 </tr>
                 <tr>
                     <td>Flags</td>
-                    <td>{{flags}}</td>
+                    <td>{{{flags}}}</td>
                 </tr>
                 <tr>
                     <td>createTimestamp</td>
@@ -130,7 +130,7 @@
                         <code>{{[1]}}</code>
                     </a>
                     &nbsp;
-                    {{[2]}}
+                    {{{[2]}}}
                 </span>
             </li>
             {{/each}}
