--- a/apps/meerkat/src/assets/views/dsait_dse_id.hbs
+++ b/apps/meerkat/src/assets/views/dsait_dse_id.hbs
@@ -94,6 +94,12 @@
         </table>
         <h2>Attribute Values</h2>
         <hr />
+        <p>
+            Note that the values below do NOT include <code>entryDN</code>,
+            <code>userPwd</code>, or <code>userPassword</code> for security
+            reasons.
+        </p>
+        <hr />
         <table>
             <thead>
                 <tr>
