Fix OB rejections

--- a/apps/meerkat/src/assets/views/ob_id.hbs
+++ b/apps/meerkat/src/assets/views/ob_id.hbs
@@ -132,7 +132,7 @@
                 </tr>
                 <tr>
                     <td><pre>Initiator Parameters Bytes</pre></td>
-                    <td><pre>{{init_params_bytes}}</pre></td>
+                    <td><pre>{{init_param_bytes}}</pre></td>
                 </tr>
                 {{#if previous_uuid}}
                 <tr>
