--- a/apps/meerkat/src/assets/views/ob_id.hbs
+++ b/apps/meerkat/src/assets/views/ob_id.hbs
@@ -134,6 +134,14 @@
                     <td><pre>Initiator Parameters Bytes</pre></td>
                     <td><pre>{{init_param_bytes}}</pre></td>
                 </tr>
+                {{#if ap_ae_title}}
+                <tr>
+                    <td><pre>Correspondent Access Point AE-Title</pre></td>
+                    <td>
+                        <pre>{{ap_ae_title}}</pre>
+                    </td>
+                </tr>
+                {{/if}}
                 {{#if previous_uuid}}
                 <tr>
                     <td><pre>Previous Version</pre></td>
