Add more OB logging and visibility; fix OB bugs

--- a/apps/meerkat/src/assets/views/ob_id.hbs
+++ b/apps/meerkat/src/assets/views/ob_id.hbs
@@ -134,6 +134,10 @@
                     <td><pre>Initiator Parameters Bytes</pre></td>
                     <td><pre>{{init_param_bytes}}</pre></td>
                 </tr>
+                <tr>
+                    <td><pre>Requested Time</pre></td>
+                    <td><pre>{{requested_time}}</pre></td>
+                </tr>
                 {{#if ap_ae_title}}
                 <tr>
                     <td><pre>Correspondent Access Point AE-Title</pre></td>
